--- a/src/css/main.css
+++ b/src/css/main.css
@@ -186,14 +186,10 @@ body {
   top: 36px;
   margin-left: 40px;
 }
-#contact .contact--list {
-  display: flex;
-  flex-direction: row;
-}
 #contact .contact--list .contact--flip {
   width: 300px;
   height: 300px;
-  perspective: 1100px;
+  perspective: 1200px;
   padding: 30px;
   margin-left: 20px;
 }
@@ -208,17 +204,22 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 #contact .contact--list .contact--flip .contact--card .card--front {
   background-color: rgb(255, 246, 246);
   border-radius: 4px;
   border: 1px solid red;
+  transform: rotateY(0deg);
+  backface-visibility: hidden;
 }
 #contact .contact--list .contact--flip .contact--card .card--back {
   transform: rotateY(180deg);
   background-color: rgb(211, 252, 255);
   border-radius: 4px;
   border: 1px solid rgb(64, 83, 255);
+  backface-visibility: hidden;
 }
 #contact .contact--list .contact--flip .contact--card .card--back a {
   font-size: 30px;
