--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -216,7 +216,7 @@
   padding-left: 30px;
 
 .contact--list{
-  @include flex-row;
+  // @include flex-row;
 
   // margin: ;
 
@@ -226,12 +226,12 @@
 
     width: 300px;
     height:   300px;
-    perspective: 1100px;
+    perspective: 1200px;
 
     padding: 30px;
     // justify-content: center;
     margin-left: 20px;
-
+    // transform-style: preserve-3d;
   
     
 
@@ -242,28 +242,46 @@
       height: 100%;
 
       position: relative;
-      transition: .4s;
+      transition: 0.4s;
       transform-style: preserve-3d;
       
+
+
+
+
+
       .card--front, .card--back {
         position: absolute;
         width: 100%; 
         height: 100%;
-        // -webkit-backface-visibility: hidden;
-        // backface-visibility: hidden;
+       
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
         // transform-style: preserve-3d;
+
+//         -ms-backface-visibility: hidden;
+// -o-backface-visibility: hidden;
+// -moz-backface-visibility: hidden;
+// -webkit-backface-visibility: hidden;
+// backface-visibility: hidden;
+
+
+
       }
   
       .card--front{
         background-color: rgb(255, 246, 246);
         border-radius: 4px;
         border: 1px solid red;
+        transform: rotateY(0deg);
+        backface-visibility: hidden;
       }
       .card--back{
         transform: rotateY(180deg);
         background-color: rgb(211, 252, 255);
         border-radius: 4px;
         border: 1px solid rgb(64, 83, 255);
+        backface-visibility: hidden;
         a{
           font-size: 30px;
           color: black;
