--- a/src/css/main.css
+++ b/src/css/main.css
@@ -186,6 +186,10 @@ body {
   top: 36px;
   margin-left: 40px;
 }
+#contact .contact--list {
+  display: flex;
+  flex-direction: row;
+}
 #contact .contact--list .contact--flip {
   width: 300px;
   height: 300px;
@@ -197,36 +201,35 @@ body {
   width: 100%;
   height: 100%;
   position: relative;
-  transition: 0.4s;
   transform-style: preserve-3d;
+  transition: 0.4s;
+  transform: rotateY(0deg);
 }
-#contact .contact--list .contact--flip .contact--card .card--front, #contact .contact--list .contact--flip .contact--card .card--back {
+#contact .contact--list .contact--flip .contact--card .card--front,
+#contact .contact--list .contact--flip .contact--card .card--back {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 200px;
+  height: 200px;
+  border-radius: 4px;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
 #contact .contact--list .contact--flip .contact--card .card--front {
   background-color: rgb(255, 246, 246);
-  border-radius: 4px;
   border: 1px solid red;
   transform: rotateY(0deg);
-  backface-visibility: hidden;
 }
 #contact .contact--list .contact--flip .contact--card .card--back {
   transform: rotateY(180deg);
   background-color: rgb(211, 252, 255);
-  border-radius: 4px;
   border: 1px solid rgb(64, 83, 255);
-  backface-visibility: hidden;
-}
-#contact .contact--list .contact--flip .contact--card .card--back a {
-  font-size: 30px;
-  color: black;
+  z-index: 200;
 }
 #contact .contact--list .contact--flip:hover .contact--card {
   transform: rotateY(180deg);
+}
+#contact .contact--list .contact--flip:hover .card--front {
+  z-index: 0;
 }
 
 /***************** project hover event!!! ************************/
