--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -216,16 +216,15 @@
   padding-left: 30px;
 
 .contact--list{
-  // @include flex-row;
-
+  @include flex-row;
   // margin: ;
 
   // height: 1000px;
-
+ 
   .contact--flip{
-
+    
     width: 300px;
-    height:   300px;
+    height: 300px;
     perspective: 1200px;
 
     padding: 30px;
@@ -233,7 +232,6 @@
     margin-left: 20px;
     // transform-style: preserve-3d;
   
-    
 
     .contact--card{
 
@@ -242,28 +240,33 @@
       height: 100%;
 
       position: relative;
-      transition: 0.4s;
+     
       transform-style: preserve-3d;
-      
+      transition: 0.4s;
+
+      transform: rotateY(0deg);
 
 
 
 
-
-      .card--front, .card--back {
+      .card--front, 
+      .card--back {
         position: absolute;
-        width: 100%; 
-        height: 100%;
-       
+        width: 200px; 
+        height: 200px;
+        border-radius: 4px;
+        // transform: rotateY(180deg);
+        
         -webkit-backface-visibility: hidden;
-        backface-visibility: hidden;
+        backface-visibility: hidden;  
+      
         // transform-style: preserve-3d;
 
-//         -ms-backface-visibility: hidden;
-// -o-backface-visibility: hidden;
-// -moz-backface-visibility: hidden;
-// -webkit-backface-visibility: hidden;
-// backface-visibility: hidden;
+        // -ms-backface-visibility: hidden;
+        // -o-backface-visibility: hidden;
+        // -moz-backface-visibility: hidden;
+        // -webkit-backface-visibility: hidden;
+        // backface-visibility: hidden;
 
 
 
@@ -271,22 +274,26 @@
   
       .card--front{
         background-color: rgb(255, 246, 246);
-        border-radius: 4px;
         border: 1px solid red;
         transform: rotateY(0deg);
-        backface-visibility: hidden;
+
+
+        // -webkit-backface-visibility: hidden;
+        // backface-visibility: hidden;
       }
       .card--back{
         transform: rotateY(180deg);
         background-color: rgb(211, 252, 255);
-        border-radius: 4px;
         border: 1px solid rgb(64, 83, 255);
-        backface-visibility: hidden;
-        a{
-          font-size: 30px;
-          color: black;
-          // margin:auto;
-        }
+
+
+        // backface-visibility: hidden;
+        z-index: 200;
+        // a{
+        //   font-size: 30px;
+        //   color: black;
+        //   // margin:auto;
+        // }
       }
 
 
@@ -297,7 +304,15 @@
   }
   .contact--flip:hover .contact--card {
     transform: rotateY(180deg);
+    // -webkit-backface-visibility: hidden;
   }
+  .contact--flip:hover .card--front {
+    z-index: 0;
+    // -webkit-backface-visibility: hidden;
+  }
+
+
+  
 
   // .contact--blog{
 
