--- a/src/css/main.css
+++ b/src/css/main.css
@@ -196,6 +196,7 @@ body {
   perspective: 1200px;
   padding: 30px;
   margin-left: 20px;
+  overflow: visible;
 }
 #contact .contact--list .contact--flip .contact--card {
   width: 100%;
@@ -213,14 +214,35 @@ body {
 }
 #contact .contact--list .contact--flip .contact--card .card--front {
   background-color: rgb(255, 246, 246);
-  border: 1px solid red;
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.5);
   z-index: 2;
+  font-size: 30px;
+  font-weight: bold;
+  padding: 30px;
 }
 #contact .contact--list .contact--flip .contact--card .card--back {
   transform: rotateY(180deg);
   background-color: rgb(211, 252, 255);
   border: 1px solid rgb(64, 83, 255);
   z-index: 1;
+}
+#contact .contact--list .contact--flip .contact--card .card--back a {
+  font-size: 80px;
+  color: black;
+  text-decoration: none;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#contact .contact--list .contact--flip .contact--card .card--back a p {
+  text-align: center;
+  font-size: 20px;
+}
+#contact .contact--list .contact--flip .contact--card .card--back .icon:hover {
+  color: white;
 }
 #contact .contact--list .contact--flip:hover .contact--card {
   transform: rotateY(180deg);
