--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -233,7 +233,7 @@
     margin-left: 20px;
     // transform-style: preserve-3d;````
   
-    
+    overflow: visible;
     .contact--card{
 
       
@@ -250,49 +250,50 @@
 
       .card--front, 
       .card--back {
-
         // -webkit-backface-visibility: hidden;
         // backface-visibility: hidden;  
-
         position: absolute;
         width: 100%; 
         height: 100%;
         border-radius: 4px;
-
-        // transform: rotateY(180deg);
-        // transform-style: preserve-3d;
-        // -ms-backface-visibility: hidden;
-        // -o-backface-visibility: hidden;
-        // -moz-backface-visibility: hidden;
-        // -webkit-backface-visibility: hidden;
-        // backface-visibility: hidden;
-
-
-
       }
   
       .card--front{
         background-color: rgb(255, 246, 246);
-        border: 1px solid red;
-        // transform: rotateY(0deg);
+        // border: 1px solid rgb(194, 188, 188);
+        // box-shadow: 60px -16px teal;
+        box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.5);
         z-index: 2;
-
-        // -webkit-backface-visibility: hidden;
-        // backface-visibility: hidden;
+        // 디자인
+        font-size: 30px;
+        font-weight: bold;
+        padding: 30px;
       }
       .card--back{
         transform: rotateY(180deg);
         background-color: rgb(211, 252, 255);
         border: 1px solid rgb(64, 83, 255);
-
-
-        // backface-visibility: hidden;
         z-index: 1;
-        // a{
-        //   font-size: 30px;
-        //   color: black;
-        //   // margin:auto;
-        // }
+        a{
+          font-size: 80px;
+          color: black;
+          // margin:auto;
+          text-decoration: none;
+          // 디자인
+          width: 100%;
+          height: 100%; 
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          p{
+            text-align: center;
+            font-size: 20px;
+          }
+        }
+        .icon:hover {
+          color: white;
+        }
       }
 
 
